[package]
name = "ab_poa"
version = "1.5.0"
authors = ["Francesco Porto <francesco.porto97@gmail.com>"]
edition = "2018"
links = "abpoa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.53.1"
#pkg-config = "0.3.16"
cmake = "0.1"

[dependencies]
rayon = "1.5.1"

# profiling
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"]}
env_logger = "0.9.0"